# d_un_pas_decide

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/memory/: MEMORY.md
document/: ARCHITECTURE.md  Backlog.md
document/claude_code/: AGENTS.md  handoff.md  prompt_générique.md  prompt_onboarding.md  prompt_onboarding_travel.md  task_list.md
document/prompts_plans/: plan_POC-001.md  plan_POC-002.md  plan_POC-005.md  prompt_POC-001.md  prompt_POC-002.md  prompt_POC-003.md  prompt_POC-004.md  prompt_POC-005.md
document/spec/: 01_agentic_introduction_planner.ipynb  02_agentic_supervisor.ipynb  linkedin_search_poc.py  spec_onboarding_prospection_linkedin.md
source/backend/adapters/enrichment/: email_site_extractor.py  run_poc004.py  web_search.py
source/backend/adapters/scraping/: browser_session.py  internal_invite_test.py  profile_email.py  profile_search.py  run_poc001.py  run_poc002.py  run_poc005.py  selectors.py
source/backend/adapters/storage/: csv_export.py
tests/unit/: test_csv_export.py  test_email_site_extractor.py  test_internal_invite_test.py  test_profile_email.py  test_profile_search.py  test_web_search.py
