[project]
name = "prospection-linkedin"
version = "0.1.0"
description = "POC d'automatisation de la prospection de coachs business sur LinkedIn pour D'un Pas Decide"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
    "pandas>=2.2",
    "streamlit>=1.37",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source"]
